# redfish-inspector

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: linters.yml
redfish_inspector/: constants.py  main.py  redfish.py  referenceapi.py
redfish_inspector/cpuid/: lookup.py
