[tool.poetry]
name = "redfish-inspector"
version = "0.1.0"
description = ""
authors = ["Michael Sherman <shermanm@uchicago.edu>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.6.2"
openstacksdk = "^0.59.0"
python-ironicclient = "^4.9.0"
sushy = "^4.0.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
isort = "^5.9.3"
flake8 = "^4.0.1"

[tool.poetry.scripts]
redfish-inspector = 'redfish_inspector.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
